[package]
name = "yubirs"
version = "0.3.1"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "A YubiKey OTP validation library"
homepage = "https://github.com/CmdrMoozy/yubirs"
repository = "https://github.com/CmdrMoozy/yubirs"
license = "Apache-2.0"

[dependencies]
bdrck = "0.9"
bincode = "1.0"
chrono = "0.4"
curl = "0.4"
data-encoding = "2.1"
failure = "0.1"
isatty = "0.1"
lazy_static = "1.0"
libc = "0.2"
log = "0.4"
# Version >= 0.10.10 / 0.9.33 is needed for new bindings submitted to upstream.
openssl = "~0.10.10"
openssl-sys = "~0.9.33"
pcsc-sys = "1.0"
rand = "0.5"
regex = "1.0"
rpassword = "2.0"
serde = "1.0"
serde_derive = "1.0"
