[package]
name = "yubirs"
version = "0.5.4"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "A YubiKey OTP validation library"
homepage = "https://github.com/CmdrMoozy/yubirs"
repository = "https://github.com/CmdrMoozy/yubirs"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bincode = "1.1"
chrono = "0.4"
curl = "0.4"
data-encoding = "2.1"
failure = "0.1"
flaggy = { version = "0.1" }
lazy_static = "1.3"
libc = "0.2"
log = "0.4"
# Version >= 0.10.10 / 0.9.33 is needed for new bindings submitted to upstream.
# This will need to be changed once a new minor (not patch) version is released.
openssl = "~0.10.10"
openssl-sys = "~0.9.33"
pcsc-sys = "1.0"
rand = "0.6"
regex = "1.1"
serde = "1.0"
serde_derive = "1.0"

[dependencies.bdrck]
version = "0.15"
default_features = false
features = ["cli", "crypto", "logging", "testing"]
