[package]
name = "yubirs"
version = "0.6.0"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "A library for interacting with YubiKeys (OTP and PIV functionality)"
homepage = "https://github.com/CmdrMoozy/yubirs"
repository = "https://github.com/CmdrMoozy/yubirs"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bincode = "1.2"
chrono = "0.4"
curl = "0.4"
data-encoding = "2.2"
failure = "0.1"
flaggy = { version = "0.1" }
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
# Version >= 0.10.10 / 0.9.33 is needed for new bindings submitted to upstream.
# This will need to be changed once a new minor (not patch) version is released.
openssl = "~0.10.10"
openssl-sys = "~0.9.33"
pcsc-sys = "1.2"
rand = { version = "0.7", features = ["small_rng", "std"] }
regex = "1.3"
serde = "1.0"
serde_derive = "1.0"

[dependencies.bdrck]
version = "0.15"
default_features = false
features = ["cli", "crypto", "logging", "testing"]
