[package]
name = "yubirs-tools"
version = "0.1.0"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Command line tools for interacting with YubiKeys, based upon yubirs"
homepage = "https://github.com/CmdrMoozy/yubirs"
repository = "https://github.com/CmdrMoozy/yubirs"
license = "Apache-2.0"
edition = "2018"

[dependencies]
data-encoding = "2.2"
failure = { version = "0.1", features = ["backtrace"] }
flaggy = { version = "0.1" }

[dependencies.bdrck]
version = "0.16"
default_features = false
features = ["cli", "logging"]

[dependencies.yubirs]
version = "0.7"
path = "../yubirs"
default_features = false
features = ["piv"]
