[package]
name = "yubirs-tools"
version = "0.2.3"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Command line tools for interacting with YubiKeys, based upon yubirs"
homepage = "https://github.com/CmdrMoozy/yubirs"
repository = "https://github.com/CmdrMoozy/yubirs"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
data-encoding = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.bdrck]
version = "0.20"
default_features = false
features = ["cli"]

[dependencies.yubirs]
version = "0.9"
path = "../yubirs"
default_features = false
features = ["piv"]
