[package]
name = "yubirs"
version = "0.7.0"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "A library for interacting with YubiKeys (OTP and PIV functionality)"
homepage = "https://github.com/CmdrMoozy/yubirs"
repository = "https://github.com/CmdrMoozy/yubirs"
license = "Apache-2.0"
edition = "2018"

[features]
default = ["otp", "piv"]
otp = ["bdrck/cli", "chrono", "curl", "regex"]
# "testing" is only used by unit tests, but stable Rust doesn't support
# different dev-dependencies and dependencies features. This hsa been fixed
# in nightly: https://github.com/rust-lang/cargo/issues/1796
piv = ["bdrck/cli", "bdrck/crypto", "bdrck/testing", "bincode", "libc", "log", "pcsc-sys"]

[dependencies]
bincode = { version = "1.2", optional = true }
chrono = { version = "0.4", optional = true }
curl = { version = "0.4", optional = true }
data-encoding = "2.2"
failure = "0.1"
lazy_static = "1.4"
libc = { version = "0.2", optional = true }
log = { version = "0.4", optional = true }
# Version >= 0.10.10 / 0.9.33 is needed for new bindings submitted to upstream.
# This will need to be changed once a new minor (not patch) version is released.
openssl = "~0.10.10"
openssl-sys = "~0.9.33"
pcsc-sys = { version = "1.2", optional = true }
rand = { version = "0.7", features = ["small_rng", "std"] }
regex = { version = "1.3", optional = true }
serde = { version = "1.0", features = ["derive"] }

[dependencies.bdrck]
version = "0.16"
optional = true
default_features = false
